--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="promo__bg">
                 <div class="promo__genre">КОМЕДИЯ</div>
                 <div class="promo__title">МАРСИАНИН</div>
-                <div class="promo__descr">ИСТОРИЯ ЧЕЛОВЕКА, ВЫЖИВШЕГО НА ЧУЖОЙ ПЛАНЕТЕ В ОДИНОЧКУ</div>
+                <div class="promo__descr">СЕРЕЖА, ПОВЕРЬ НА СЛОВО, ПРАВИЛЬНАЯ ФОРМА СЛОВА бег - бегит !!! (ОФИЦИАЛЬНЫЙ ИСТОЧНИК)(ПРОСТО ПОВЕРЬ)</div>
                 <div class="promo__ratings">
                     <span>IMDb: 8.0</span>
                     <span>Кинопоиск: 7.7</span>
